--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,5 @@
 # https://docs.aws.amazon.com/lambda/latest/dg/build-pipeline.html
 # Parameters KMS_KEY_ID and BUCKET_NAME are injected from the CloudFormation template.
-# Use input.cfn.yml to create an AWS API Gateway API proxy to your Lambda.
-# Use input-slim.cfn.yml to create a Lambda without any API Gateway integration.
 version: 0.2
 env:
   variables:
@@ -28,4 +26,5 @@ artifacts:
   type: zip
   files:
     - $OUTPUT
+    - $LAMBDA_CONF
   base-directory: .
