--- a/lambda-pipeline.cfn.yml
+++ b/lambda-pipeline.cfn.yml
@@ -48,6 +48,13 @@ Parameters:
     MaxLength: 1024
     Default: buildspec.yml
 
+  LambdaConf:
+    Type: String
+    Description: Path to Lambda template configuration file
+    MinLength: 1
+    MaxLength: 1024
+    Default: lambda-configuration.yml
+
   OutputTemplate:
     Type: String
     Description: Output template produced by build
@@ -79,6 +86,7 @@ Metadata:
     - Label:
         default: Build
       Parameters:
+        - LambdaConf
         - BuildSpec
         - KmsKeyAdmin
         - CodeBuildEnvironment
@@ -108,6 +116,8 @@ Resources:
             Value: !Ref FunctionsS3Bucket
           - Name: KMS_KEY_ID
             Value: !If [ UseKms, !Ref KmsKey, '' ]
+          - Name: LAMBDA_CONF
+            Value: !Ref LambdaConf
       Source:
         BuildSpec: !Ref BuildSpec
         Type: CODEPIPELINE
@@ -171,6 +181,7 @@ Resources:
                 Capabilities: CAPABILITY_IAM
                 RoleArn: !GetAtt CloudFormationLambdaExecutionRole.Arn
                 TemplatePath: !Join ['::', [ MyAppBuild, !Ref OutputTemplate]]
+                TemplateConfiguration: !Join ['::', [ MyAppBuild, !Ref LambdaConf]]
               RunOrder: 1
         - Name: Deploy
           Actions:
