--- a/input-s3.cfn.yml
+++ b/input-s3.cfn.yml
@@ -1,7 +1,9 @@
 AWSTemplateFormatVersion: '2010-09-09'
+
 Transform: AWS::Serverless-2016-10-31
+
 Resources:
-  CreateThumbnail:
+  CreateObject:
     Type: AWS::Serverless::Function
     Properties:
       Handler: com.malliina.lambda.s3.S3Handler
@@ -9,7 +11,7 @@ Resources:
       Timeout: 60
       Policies: AWSLambdaExecute
       Events:
-        CreateThumbnailEvent:
+        CreateObjectEvent:
           Type: S3
           Properties:
             Bucket: !Ref SrcBucket
