--- a/input-s3.cfn.yml
+++ b/input-s3.cfn.yml
@@ -15,7 +15,7 @@ Resources:
   CreateObject:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: com.malliina.lambda.s3.S3Handler
+      Handler: com.malliina.lambda.S3EventHandler
       Runtime: java8
       CodeUri: ./function.jar
       Timeout: 60
