--- a/input.cfn.yml
+++ b/input.cfn.yml
@@ -17,7 +17,7 @@ Resources:
   TimeFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: com.malliina.lambda.LambdaHandler
+      Handler: com.malliina.lambda.ScheduledEventHandler
       Runtime: java8
       CodeUri: ./function.jar
       Timeout: 60
