--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,6 @@
 version = 2.4.0
 maxColumn = 120
 includeCurlyBraceInSelectChains = false
+importSelectors = singleLine
+continuationIndent.defnSite = 2
+continuationIndent.extendSite = 2
