--- a/lambda/buildspec-stack.yml
+++ b/lambda/buildspec-stack.yml
@@ -1,7 +1,3 @@
-# https://docs.aws.amazon.com/lambda/latest/dg/build-pipeline.html
-# Parameters KMS_KEY_ID and BUCKET_NAME are injected from the CloudFormation template.
-# Use input.cfn.yml to create an AWS API Gateway API proxy to your Lambda.
-# Use input-slim.cfn.yml to create a Lambda without any API Gateway integration.
 version: 0.2
 env:
   variables:
@@ -9,10 +5,10 @@ env:
 phases:
   install:
     runtime-versions:
-      java: openjdk11
+      java: corretto11
     commands:
       - echo `pwd`
-      - npm install -g aws-cdk
+      - npm install -g aws-cdk@$CDK_VERSION
   build:
     commands:
       - cdk synth LambdaStack -o target
