--- a/lambda/buildspec-stack.yml
+++ b/lambda/buildspec-stack.yml
@@ -8,7 +8,7 @@ phases:
       - echo `pwd`
       - npm install -g aws-cdk@$CDK_VERSION
       - npm install -g cdk-assets@$CDK_VERSION
-  pre-build:
+  pre_build:
     commands:
       - cdk synth $LAMBDA_STACK -o target
   build:
